--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -68,6 +68,7 @@ jobs:
       run: |
         wget -qO ${MAIN_PATH}/patches/intel-microcode.patch https://github.com/openwrt/openwrt/commit/7241a91c948066e9062729a043944fd313826753.patch
         wget -qO ${MAIN_PATH}/patches/dnsmasq.patch https://patch-diff.githubusercontent.com/raw/openwrt/openwrt/pull/14669.patch
+        sed -i '30 s/7/4/' ${MAIN_PATH}/patches/dnsmasq.patch
         wget -qO ${MAIN_PATH}/patches/passwall.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/404.patch
         # Update intel-microcode, dnsmasq
         cd ${OPENWRT_PATH}
