--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -67,16 +67,16 @@ jobs:
       continue-on-error: true
       run: |
         wget -qO ${MAIN_PATH}/patches/intel-microcode.patch https://github.com/openwrt/openwrt/commit/7241a91c948066e9062729a043944fd313826753.patch
-        wget -qO ${MAIN_PATH}/patches/dnsmasq.patch https://patch-diff.githubusercontent.com/raw/openwrt/openwrt/pull/14669.patch
+        wget -qO ${MAIN_PATH}/patches/dnsmasq.patch https://github.com/openwrt/openwrt/commit/33160df17f92df2f4b4b75895d3b52b8b305833f.patch
         sed -i '30 s/7/4/' ${MAIN_PATH}/patches/dnsmasq.patch
-        wget -qO ${MAIN_PATH}/patches/passwall.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/404.patch
+        wget -qO ${MAIN_PATH}/patches/passwall.diff https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/404.diff
         # Update intel-microcode, dnsmasq
         cd ${OPENWRT_PATH}
         git am ${MAIN_PATH}/patches/intel-microcode.patch
         git am ${MAIN_PATH}/patches/dnsmasq.patch
         cd ${OPENWRT_PATH}/feeds/luci
         # Update passwall
-        git am ${MAIN_PATH}/patches/passwall.patch
+        git apply ${MAIN_PATH}/patches/passwall.diff
         # Add compilation date
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
