--- a/.github/workflows/Build-X64-23.05-homeproxy.yml
+++ b/.github/workflows/Build-X64-23.05-homeproxy.yml
@@ -77,7 +77,7 @@ jobs:
         # VERSION_CODE_FILENAMES
         sed -i '269s/default y/default n/' ./package/base-files/image-config.in
         # default lan ip
-        sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
+        sed -i 's/192\.168\.1\.1/192.168.6.1/g' ./package/base-files/files/bin/config_generate
         # busybox options: unlink, tree
         sed -i '901s/default n/default y/' ./package/utils/busybox/Config-defaults.in
         sed -i '2203s/default n/default y/' ./package/utils/busybox/Config-defaults.in
