--- a/.github/workflows/Build-X64-23.05-homeproxy.yml
+++ b/.github/workflows/Build-X64-23.05-homeproxy.yml
@@ -64,23 +64,18 @@ jobs:
     - name: Apply patches
       continue-on-error: true
       run: |
-        # Add compilation date
+        wget -qO ${MAIN_PATH}/patches/argon.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/409.patch
+        cd ${OPENWRT_PATH}
+        git am ${MAIN_PATH}/patches/myModifications.patch
         cd ${OPENWRT_PATH}/feeds/luci
+        # Update argon
+        git am ${MAIN_PATH}/patches/argon.patch
+        # Add compilation date
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
 
-    - name: Customize
+    - name: Custom argon wallpaper
       run: |
-        cd ${OPENWRT_PATH}
-        # Change default cflags
-        sed -i 's/Os/O2/g' ./include/target.mk
-        # VERSION_CODE_FILENAMES
-        sed -i '269s/default y/default n/' ./package/base-files/image-config.in
-        # default lan ip
-        sed -i 's/192\.168\.1\.1/192.168.6.1/g' ./package/base-files/files/bin/config_generate
-        # busybox options: unlink, tree
-        sed -i '901s/default n/default y/' ./package/utils/busybox/Config-defaults.in
-        sed -i '2203s/default n/default y/' ./package/utils/busybox/Config-defaults.in
         picct=0
         for pic in ${MAIN_PATH}/custom/*.jpg; do
           picct=$(expr ${picct} + 1)
