--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -34,13 +34,6 @@ jobs:
       with:
         ref: main
 
-    - name: Get source code
-      uses: actions/checkout@v4
-      with:
-        repository: immortalwrt/immortalwrt
-        ref: openwrt-23.05
-        path: 'openwrt'
-
     - name: Set environment
       run: |
         mkdir -p releases artifacts
@@ -50,11 +43,17 @@ jobs:
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
 
-    - name: Get feeds and dl
+    - name: Get immortalwrt code
+      uses: actions/checkout@v4
+      with:
+        repository: immortalwrt/immortalwrt
+        ref: openwrt-23.05
+        path: ./openwrt
+
+    - name: Get last dl
       run: |
         cd ${OPENWRT_PATH}
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        mkdir -p ./feeds
         wget -q https://github.com/${GITHUB_REPOSITORY}/releases/download/latest-x64-23.05/dl_cache.tar.zst || dlCacheState="notExist"
         if [ ${dlCacheState}x = "notExist"x ]; then
           echo "dl cache does not exist."
@@ -63,18 +62,45 @@ jobs:
           echo "dl cache restored."
         fi
 
+    - name: Get packages code
+      uses: actions/checkout@v4
+      with:
+        repository: immortalwrt/packages
+        ref: openwrt-23.05
+        path: ./openwrt/feeds/packages
+
+    - name: Get luci code
+      uses: actions/checkout@v4
+      with:
+        repository: immortalwrt/luci
+        ref: openwrt-23.05
+        path: ./openwrt/feeds/luci
+
+    - name: Get routing code
+      uses: actions/checkout@v4
+      with:
+        repository: openwrt/routing
+        ref: openwrt-23.05
+        path: ./openwrt/feeds/routing
+
+    - name: Get telephony code
+      uses: actions/checkout@v4
+      with:
+        repository: openwrt/telephony
+        ref: openwrt-23.05
+        path: ./openwrt/feeds/telephony
+
     - name: Apply patches
       continue-on-error: true
       run: |
-        wget -qO ${MAIN_PATH}/patches/passwall.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/408.patch
         wget -qO ${MAIN_PATH}/patches/argon.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/409.patch
         cd ${OPENWRT_PATH}
         git am ${MAIN_PATH}/patches/myModifications.patch
+        cd ${OPENWRT_PATH}/feeds/packages
+        git am ${MAIN_PATH}/Update-chinadns-ng.patch
         cd ${OPENWRT_PATH}/feeds/luci
-        # Update argon, passwall
         git am ${MAIN_PATH}/patches/argon.patch
-        git am ${MAIN_PATH}/patches/passwall.patch
-        # Add compilation date
+        git am ${MAIN_PATH}/patches/Update-passwall-makefile.patch
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
 
@@ -92,6 +118,8 @@ jobs:
     - name: Generate and update configs
       run: |
         cd ${OPENWRT_PATH}
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
         cat ${MAIN_PATH}/configs/X64-23.05/myConfig > ./.config
         make defconfig
         cp ./.config ${MAIN_PATH}/configs/X64-23.05/new_all_config
@@ -114,18 +142,18 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         echo "Using $(($(nproc)+1)) threads to compile..."
-        make download world -j $(($(nproc)+1)) || make download world -j1 V=s
+        make download -j $(($(nproc)+1))
+        make world -j $(($(nproc)+1)) || make world -j1 V=s
         echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
-        du -h --max-depth=1
 
     - name: Delete old release
       continue-on-error: true
-      uses: dev-drprasad/delete-tag-and-release@v0.2.1
-      with:
-        delete_release: true
-        tag_name: latest-x64-23.05
+      permissions:
+        contents: write
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh release delete -y 'latest-x64-23.05' --cleanup-tag
 
     - name: Manage releases and artifacts
       run: |
