--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -100,7 +100,7 @@ jobs:
         cd ${OPENWRT_PATH}
         git am ${MAIN_PATH}/patches/myModifications.patch
         cd ${OPENWRT_PATH}/feeds/packages
-        git am ${MAIN_PATH}/Update-chinadns-ng.patch
+        git am ${MAIN_PATH}/patches/Update-chinadns-ng.patch
         cd ${OPENWRT_PATH}/feeds/luci
         git am ${MAIN_PATH}/patches/argon.patch
         git am ${MAIN_PATH}/patches/passwall.patch
@@ -117,7 +117,7 @@ jobs:
         done
         tgtpic=$(expr $(date +%s) % ${picct} + 1)
         echo "Using No.${tgtpic} pic as default argon background."
-        mv -f ${MAIN_PATH}/custom/${tgtpic}.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
+        mv -f ${MAIN_PATH}/custom/${tgtpic}.jpg ${OPENWRT_PATH}/feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
 
     - name: Generate and update configs
       run: |
