--- a/.github/workflows/Build-X64-master-homeproxy.yml
+++ b/.github/workflows/Build-X64-master-homeproxy.yml
@@ -1,4 +1,4 @@
-name: Build X86-64 23.05 with homeproxy
+name: Build X86-64 master with homeproxy
 
 on:
   workflow_dispatch:
@@ -47,7 +47,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: immortalwrt/immortalwrt
-        ref: openwrt-23.05
+        ref: master
         path: ./openwrt
 
     - name: Get last dl
@@ -66,28 +66,28 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: immortalwrt/packages
-        ref: openwrt-23.05
+        ref: master
         path: ./openwrt/feeds/packages
 
     - name: Get luci code
       uses: actions/checkout@v4
       with:
         repository: immortalwrt/luci
-        ref: openwrt-23.05
+        ref: master
         path: ./openwrt/feeds/luci
 
     - name: Get routing code
       uses: actions/checkout@v4
       with:
         repository: openwrt/routing
-        ref: openwrt-23.05
+        ref: master
         path: ./openwrt/feeds/routing
 
     - name: Get telephony code
       uses: actions/checkout@v4
       with:
         repository: openwrt/telephony
-        ref: openwrt-23.05
+        ref: master
         path: ./openwrt/feeds/telephony
 
     - name: Apply patches
@@ -97,11 +97,7 @@ jobs:
         cd ${OPENWRT_PATH}
         git am ${MAIN_PATH}/patches/myModifications.patch
         cd ${OPENWRT_PATH}/feeds/luci
-        # Update argon
         git am ${MAIN_PATH}/patches/argon.patch
-        # Add compilation date
-        sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
-        git am ${MAIN_PATH}/patches/Add-compilation-date.patch
 
     - name: Custom argon wallpaper
       run: |
@@ -120,6 +116,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         cat ${MAIN_PATH}/configs/hp/myConfig > ./.config
+        sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ./.config
         make defconfig
         cp ./.config ${MAIN_PATH}/configs/hp/new_all_config
         sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/hp/new_diff_config
@@ -130,7 +127,7 @@ jobs:
           mv new_diff_config diff_config
           cd ${MAIN_PATH}
           git add ${MAIN_PATH}/configs/hp/all_config ${MAIN_PATH}/configs/hp/diff_config
-          git commit -m "Update X64-23.05-homeproxy config files"
+          git commit -m "Update X64-master-homeproxy config files"
           git push origin main
           echo "New configs commited."
         else
@@ -151,7 +148,7 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh release delete -y 'latest-x64-23.05-hp' --cleanup-tag
+        gh release delete -y 'latest-x64-master-hp' --cleanup-tag
 
     - name: Manage releases and artifacts
       run: |
@@ -164,7 +161,7 @@ jobs:
     - name: Upload to Releases
       uses: ncipollo/release-action@v1
       with:
-        name: latest 23.05 x64 with homeproxy firmware
-        tag: latest-x64-23.05-hp
+        name: latest master x64 with homeproxy firmware
+        tag: latest-x64-master-hp
         artifacts: ${{ env.RELEASES_PATH }}/*
         body: ${{ env.RELEASE_BODY }}
