--- a/.github/workflows/Build-X64-master-homeproxy.yml
+++ b/.github/workflows/Build-X64-master-homeproxy.yml
@@ -40,8 +40,8 @@ jobs:
         echo "MAIN_PATH=$(pwd)" >> $GITHUB_ENV
         echo "OPENWRT_PATH=$(pwd)/openwrt" >> $GITHUB_ENV
         echo "RELEASES_PATH=$(pwd)/releases" >> $GITHUB_ENV
-        git config --global user.name "github-actions"
-        git config --global user.email "github-actions@github.com"
+        git config --global user.name "Github Actions"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
     - name: Get immortalwrt code
       uses: actions/checkout@v4
@@ -116,10 +116,10 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         cat ${MAIN_PATH}/configs/hp/myConfig > ./.config
-        sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ./.config
         make defconfig
         cp ./.config ${MAIN_PATH}/configs/hp/new_all_config
         sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/hp/new_diff_config
+        sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ./.config
         cd ${MAIN_PATH}/configs/hp/
         if [ -n "$(diff -q new_all_config all_config)" ]; then
           rm -f all_config diff_config
@@ -141,7 +141,6 @@ jobs:
         make download -j $(($(nproc)+1))
         make world -j $(($(nproc)+1)) || make world -j1 V=s
         echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
-        du -h --max-depth=1
 
     - name: Delete old release
       continue-on-error: true
