--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -26,7 +26,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo apt-get -y update
-        sudo apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache clang clangd cmake curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc-s1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig tar time uglifyjs unzip wget xsltproc zlib1g-dev zstd
+        sudo apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache clang clangd cmake curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc-s1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses-dev libpython3-dev libreadline-dev libssl-dev libtool libyaml-dev libz-dev p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig tar time texinfo uglifyjs unzip wget xsltproc zlib1g-dev zstd
         sudo apt-get -y clean
 
     - name: Checkout repo
@@ -93,13 +93,8 @@ jobs:
     - name: Apply patches
       continue-on-error: true
       run: |
-        wget -qO ${MAIN_PATH}/patches/argon.patch https://patch-diff.githubusercontent.com/raw/immortalwrt/luci/pull/409.patch
         cd ${OPENWRT_PATH}
         git am ${MAIN_PATH}/patches/myModifications.patch
-        cd ${OPENWRT_PATH}/feeds/luci
-        git am ${MAIN_PATH}/patches/argon.patch
-        cd ${OPENWRT_PATH}/feeds/packages
-        git am ${MAIN_PATH}/patches/Update-chinadns-ng.patch
 
     - name: Custom argon wallpaper
       run: |
