--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -94,6 +94,7 @@ jobs:
       continue-on-error: true
       run: |
         cd ${OPENWRT_PATH}
+        git am ${MAIN_PATH}/patches/fix-LuCi-DefaultString.patch
         git am ${MAIN_PATH}/patches/myModifications.patch
 
     - name: Custom argon wallpaper
